[package]
authors = ["Simon Cambier <simon.cambier@protonmail.com>"]
edition = "2018"
name = "roguelike-glsp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
glsp = "0.2.0"
lazy_static = "1.4.0"
notify = "4.0.17"
parking_lot = "0.11.1"
rltk = { git = "https://github.com/amethyst/bracket-lib" }
rust-embed = "5.9.0"
strum = "0.21"
strum_macros = "0.21"

[profile.dev]
opt-level = 2
