[package]
authors = ["Simon Cambier <simon.cambier@protonmail.com>"]
edition = "2018"
name = "roguelike-glsp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
glsp = {version = "0.2.0", features = ["compiler"]}
notify = "4.0.17"
bracket-lib = {git = "https://github.com/amethyst/bracket-lib"}
rust-embed = "5.9.0"
strum = "0.21"
strum_macros = "0.21"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[features]
compiler = []
